<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hora y Clima</string>
    <string name="seccion_hora">Hora</string>
    <string name="seccion_clima">Temperatura</string>
    <string name="chile">🇨🇱  Chile</string>
    <string name="espana">🇪🇸  España</string>
    <string name="actualizar">Actualizar</string>
    <string name="cargando">Cargando…</string>
    <string name="seccion_euro">Euro</string>
    <string name="euro_detalle">Pesos chilenos por 1 €</string>
    <string name="widget_descripcion">Hora de Chile y España, temperaturas y euro</string>
</resources>
